infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-service
                port:
                  number: 6001
          - path: /post/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 6002
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 6003 
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
